peac_dev/force-app/main/default/objects/IL_Integration_Logs__c/IL_Integration_Logs__c.object-meta.xml
<CustomObject>
    <label>IL Integration Log</label>
    <nameField>
        <displayFormat>Log-{000000}</displayFormat>
        <label>IL Integration Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IL Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>