peac_dev/force-app/main/default/objects/IL_Integration_Logs__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>IL Integration Logs</relationshipLabel>
    <relationshipName>IL_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>