peac_dev/force-app/main/default/objects/IL_Integration_Logs__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>IL Integration Logs</relationshipLabel>
    <relationshipName>IL_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>