peac_dev/force-app/main/default/objects/IL_Integration_Logs__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>IL Integration Logs</relationshipLabel>
    <relationshipName>IL_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>