peac_dev/force-app/main/default/objects/IL_Integration_Logs__c/fields/ContractAsset__c.field-meta.xml
<CustomField>
    <fullName>ContractAsset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Asset</label>
    <referenceTo>Contract_Asset__c</referenceTo>
    <relationshipLabel>IL Integration Logs</relationshipLabel>
    <relationshipName>IL_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>