peac_dev/force-app/main/default/objects/IL_Integration_Logs__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance</label>
    <referenceTo>Insurance__c</referenceTo>
    <relationshipLabel>IL Integration Logs</relationshipLabel>
    <relationshipName>IL_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>