peac_dev/force-app/main/default/objects/IL_Integration_Logs__c/fields/Integration_Name__c.field-meta.xml
<CustomField>
    <fullName>Integration_Name__c</fullName>
    <label>Integration Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Infolease Update Customer</fullName>
            </value>
            <value>
                <fullName>Infolease Update Insurance</fullName>
            </value>
            <value>
                <fullName>Infolease Update Asset</fullName>
            </value>
            <value>
                <fullName>Infolease Update Contract</fullName>
            </value>
            <value>
                <fullName>Infolease Open Item Waiver</fullName>
            </value>
            <value>
                <fullName>InfoLease Generate Buyout Quote</fullName>
            </value>
            <value>
                <fullName>InfoLease Generate Buyout Quote DP</fullName>
            </value>
            <value>
                <fullName>InfoLease Create Insurance</fullName>
            </value>
            <value>
                <fullName>Infolease Create Customer</fullName>
                <isActive>false</isActive>
                <label>Infolease Create Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>