peac_dev/force-app/main/default/objects/IL_Integration_Logs__c/fields/Open_Item_Waived_Amount__c.field-meta.xml
<CustomField>
    <fullName>Open_Item_Waived_Amount__c</fullName>
    <label>Open Item Waived Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>