peac_dev/force-app/main/default/objects/IL_Integration_Logs__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Sits in backend, used to sort sObject Type when logging errors</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>