peac_dev/force-app/main/default/objects/IL_Integration_Logs__c/fields/Request_Text__c.field-meta.xml
<CustomField>
    <fullName>Request_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>