peac_dev/force-app/main/default/objects/IL_Integration_Logs__c/fields/ResponseText__c.field-meta.xml
<CustomField>
    <fullName>ResponseText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Response Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>