peac_dev/force-app/main/default/objects/IL_Integration_Logs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Integration_Name__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Contract__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Account__c</columns>
    <columns>Insurance__c</columns>
    <columns>Request_Text__c</columns>
    <columns>ResponseText__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>